Merged eth2 branch.